src/GeositeFramework/css/app.css
/* -------------------------------------------------- 
   Table of Contents
-----------------------------------------------------
:: Shared Styles
:: Top Bar
:: Content Area - Sidebar
:: Content Area - Map
:: Media Queries
*/

/* -----------------------------------------
   Shared Styles
----------------------------------------- */

@import url(http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700);

html, body {
    height: 100%;
    min-height: 100%;
    overflow: hidden;
    font-family: 'Archivo Narrow', 'Arial Narrow', Arial, Helvetica, sans-serif !important;
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'Archivo Narrow', 'Arial Narrow', Arial, Helvetica, sans-serif;
}

input.code-like, textarea.code-like {
    font-family: "Courier New", Courier, monospace;
}

/*------------------------------------------
    EXT Style "adjustments"
------------------------------------------*/
.x-grid-cell
{
    padding: 0px;
}

/* -----------------------------------------
   Top Bar Styling
----------------------------------------- */

.top-bar {
    margin-bottom: 0;
    }
    .top-bar ul > li.divider {
        background: white;
        background: rgba(255,255,255,.5);
    }
     .top-bar ul span.dropdown-arrow {
           font-size: 10px;
            margin-left: 4px;
    }
    .top-bar ul > li.name h1 {
        background: white;
        position: relative;
        float: left;
        }
        .top-bar ul > li.name h1:after {
            content: '';
            position: absolute;
            right: -15px;
            top: 0;
            width: 0;
            height: 0;
            border-top: 0px solid transparent;
            border-left: 15px solid white;
            border-bottom: 45px solid transparent;
        }
        .top-bar ul > li.name h1 a {
            text-transform: uppercase;
            font-size: 16px !important;
        }
    .top-bar ul > li.name h2{
        font-size: 16px;
        float: left;
        margin-left: 22px;
        color: white;
        text-transform: uppercase;
        
    }
    .top-bar ul > li.name h2 a {
        font-size: inherit;
        line-height: normal;
    }
        
    .top-bar ul > li:not(.name):hover, 
    .top-bar ul > li:not(.name).active, 
    .top-bar ul > li:not(.name):focus {
        background: white;
        background: rgba(255,255,255,.25);
        }
        .top-bar ul > li:not(.name):hover a, 
        .top-bar ul > li:not(.name).active a, 
        .top-bar ul > li:not(.name):focus a {
            color: rgb(14, 133, 138);
            color: rgba(255,255,255,1);
        }
    
    .top-bar ul.left {
        margin-left: 26px;
        font-size: 16px;
        font-weight: bold;
        color: white;
        text-transform: uppercase;
    }
    
    
/* -----------------------------------------
   Content Area - Helpers
----------------------------------------- */
    
.content {
    position: relative;
    height: 100%;
    width: 100%;
    overflow: hidden;
    float: left;
    display: none;
}
.view-left #left-pane,
.view-right #right-pane,
.view-split .content {
    display: block;
}
.view-split .content {
    width: 50%;
}

/* -----------------------------------------
   Content Area - Sidebar
----------------------------------------- */
    .content .sidebar {
        width: 85px;
        height: 100%;
        background: #333;
        position: relative;
        float: left;

        box-shadow: 0 0 20px #666;
        box-shadow: 0 0 20px rgba(0,0,0,.5);
        z-index: 9;
        }
        .content .sidebar ul.side-nav {
            padding: 0;
            }
            .content .sidebar ul.side-nav li {
                margin: 0;
                }
                .content .sidebar ul.side-nav li:hover a {
                    background: #222;
                    color: #FFF;
                }
                .content .sidebar ul.side-nav li a {
                    text-align: center;
                    color: #939598;
                    min-height: 75px;
                    padding: 8px 0 8px;
                    font-size: 12px;
                    font-weight: 700;
                    line-height: 16px;
                }
            .content .sidebar ul.side-nav.top {
                overflow: hidden;
                box-shadow: 0 0 15px black inset;
            }
            .content .sidebar ul.side-nav.top li {
                border-bottom: #808285 solid 1px;
                }
                .content .sidebar ul.side-nav.top li:last-child {
                    border-bottom: none;
                }
                .content .sidebar ul.side-nav.top li.active a {
                    background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0)));
                    background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    background: -o-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    background: -ms-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
                    color: #FFF;
                }
        
        .content .sidebar ul.side-nav.bottom {
            position: absolute;
            bottom: 0;
            background: #444;
            }
            .content .sidebar ul.side-nav.bottom > li.divider {
                border-top: #808285 solid 1px;
            }
            
        .content .sidebar img.icon {
            width: 32px;
            height: 32px;
            display: block;
            margin: 0 auto 7px;
            border: none;
            color: transparent;
        }
/* ... */

